--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "extract-osm": "tsx scripts/extractOSMData.ts"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.84.0",
     "next": "16.0.3",
     "react": "19.2.0",
